--- a/TresLinea.html
+++ b/TresLinea.html
@@ -10,8 +10,9 @@
             <h1 id="titulo">Tres en raya</h1>
             <h3 id="aaa">...</h3>
         </div>
+        
         <button type="button" id="res" class="m-3 btn btn-danger">Reset</button>
-        <div class="row p-3">
+        <div class="row m-3">
             <div class="col-4 px-2">
                 <button class="casilla fi1 btn btn-info m-3" type="button"></button>
             </div>
@@ -21,7 +22,7 @@
             <div class="col-4 px-2">
                 <button class="casilla fi1 btn btn-info m-3" type="button"></button>
             </div>
-        </div><div class="row p-3">
+        </div><div class="row m-3">
             <div class="col-4 px-2">
                 <button class="casilla btn btn-info m-3" type="button"></button>
             </div>
@@ -32,7 +33,7 @@
                 <button class="casilla btn btn-info m-3" type="button"></button>
             </div>
         </div>
-        <div class="row p-3">
+        <div class="row m-3">
             <div class="col-4 px-2">
                 <button class="casilla btn btn-info m-3" type="button"></button>
             </div>
@@ -40,7 +41,7 @@
                 <button class="casilla btn btn-info m-3" type="button"></button>
             </div>
             <div class="col-4 px-2">
-                <button class="casilla btn btn-info m-3" type="button"></button>
+                <button class="casilla btn btn-info m-3 left" type="button"></button>
             </div>
         </div>
         <script src="tres.js"> </script>
